<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/tvRegisterHeader"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/register_header"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/tvRegisterUsername"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/register_username"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <EditText
        android:id="@+id/etRegisterUsername"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:inputType="text" />

    <TextView
        android:id="@+id/tvRegisterPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/register_password"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <EditText
        android:id="@+id/etRegisterPassword"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:inputType="text" />

    <TextView
        android:id="@+id/tvRegisterRepassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/register_repassword"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <EditText
        android:id="@+id/etRegisterRePassword"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:inputType="text" />

    <Button
        android:id="@+id/bRegisterSubmit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/register_submit" />

    <Button
        android:id="@+id/bRegisterCancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/register_cancel" />

</LinearLayout>